<resources>
    <string name="app_name">mVips</string>

    <string name="navigation_drawer_open">Otvori izbornik</string>
    <string name="navigation_drawer_close">Zatvori izbornik</string>

    <string name="action_settings">Postavke</string>
    <string name="Poruka_app_molimPricekajte">Molim pričekajte</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pretraga">Pretraga</string>
    <string name="PosaljiPodatke_title">Pošalji podatke</string>
    <string name="PrimiPodatke_title">Učitaj podatke</string>
    <string name="Log_title">Log</string>
    <string name="Komitenti_title">Komitenti</string>
    <string name="Artikli_title">Artikli</string>
    <string name="JMJ_title">JMJ</string>
    <string name="Registri_title">Registri</string>
    <string name="NemaPodatakaText">NEMA PODATAKA!</string>
    <string name="potrebnaSinkronizacijaText">NAPRAVITE SINKRONIZACIJU PODATAKA!!!</string>
    <string name="Izaberi"><u>Izaberi!</u></string>
    <string name="OKtext">U redu</string>
    <string name="CANCELtext">Odustani</string>
    <string name="Napomena">Napomena</string>
    <string name="NaslovApp1Dokumenti">Dokumenti</string>
    <string name="GreskaUnosDatuma">Greška pri upisu datuma</string>
    <string name="Upozorenje">Upozorenje!!!</string>
    <string name="UpitBrisanjeDokumenta">Da li ste sigurni da želite izbrisati ovaj dokument?</string>
    <string name="Da">DA</string>
    <string name="Ne">NE</string>
    <string name="mogucnosti">Mogućnosti</string>
    <string name="NaslovApp1Stavke">Stavke</string>
    <string name="NoviDokument">Novi dokument</string>
    <string name="NovaStavka">Nova stavka</string>
    <string name="PorukaDownloadPodataka">Radim download podataka molim pričekajte!</string>
    <string name="NepotpunUnos">Niste unijeli sve potrebne podatke!</string>
    <string name="NedozvoljenaNula">Nije dozvoljen unos 0!</string>
    <string name="MaksimalnoDozvoljenaKolicina">Nije dozvoljen unos količine veće od 1.000.000,00!</string>
    <string name="TabelaNijeUpToDate">Tabela nije up-to-date!!!</string>
    <string name="PosaljiPodatke">Pošalji podatke</string>
    <string name="PostavkeNaslov">Postavke aplikacije</string>
    <string name="title_activity_login">Prijava</string>
    <string name="odjavi_i_izbrisi_podatke">Odjavi i izbriši podatke</string>
    <string name="sigurnost_aplikacije">Sigurnost aplikacije</string>
    <string name="postavke_aplikacije">Postavke aplikacije</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="ponistiFilter">Poništi filter</string>
    <string name="pritisnite_natrag_još_jednom_exit">Još jednom pritisnite natrag da bi ste izišli iz aplikacije</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Lozinka (opcionalno)</string>
    <string name="action_sign_in">Prijavi se ili se registriraj</string>
    <string name="action_sign_in_short">Prijavi se</string>
    <string name="error_invalid_email">Email adresa nije valjana</string>
    <string name="error_invalid_password">Lozinka je prekratka</string>
    <string name="error_incorrect_password">Lozinka nije ispravna</string>
    <string name="error_field_required">Ovo polje je potrebno</string>
    <string name="permission_rationale">"Pristup kontaktima je potreban za automatsko dovršavalje email-ova."
    </string>
</resources>
