<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Podaci">
        <menu>
            <item
                android:id="@+id/nav_artikli"
                android:icon="@drawable/ic_artikli_24dp"
                android:title="@string/Artikli_title" />
            <item
                android:id="@+id/nav_komitenti"
                android:icon="@drawable/ic_komitenti_24dp"
                android:title="@string/Komitenti_title" />
            <item
                android:id="@+id/nav_jmj"
                android:icon="@drawable/ic_registri_24dp"
                android:title="@string/Registri_title" />
        </menu>
    </item>
    <item android:title="Komunikacija">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_file_upload_black_24dp"
                android:title="@string/PosaljiPodatke_title" />
            <item
                android:id="@+id/nav_recive"
                android:icon="@drawable/ic_file_download_black_24dp"
                android:title="@string/PrimiPodatke_title" />

        </menu>
    </item>

</menu>
