<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marko.vips_artikli.App1UnosStavkeActivity">

    <TextView
        android:id="@+id/tvArtikl_App1UnosStavke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Artikl"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtArtikal_App1UnosStavke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/mojTextStyleZaIzbor"
        android:text="@string/Izaberi"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvArtikl_App1UnosStavke"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvJmj_App1UnosStavke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Jedinca mjere"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRokTrajanja_App1UnosStavke" />

    <TextView
        android:id="@+id/txtJmj_App1UnosStavke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Izaberi"
        android:textAppearance="@style/mojTextStyleZaIzbor"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvJmj_App1UnosStavke"
        app:layout_constraintTop_toBottomOf="@+id/txtRokTrajanja_App1UnosStavke" />

    <TextView
        android:id="@+id/tvKolicina_App1UnosStavke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Količina"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtJmj_App1UnosStavke" />
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <EditText
        android:id="@+id/txtKolicina_App1UnosStavke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:paddingTop="0dp"
        android:selectAllOnFocus="true"
        android:text="0,00"
        android:textAppearance="@style/mojTextStyleZaIzbor"
        android:textColor="@color/bojaZaIzborClick"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvKolicina_App1UnosStavke"
        app:layout_constraintTop_toBottomOf="@+id/txtJmj_App1UnosStavke" />

    <TextView
        android:id="@+id/tvRokTrajanja_App1UnosStavke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Rok trajanja"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtArtikal_App1UnosStavke" />

    <TextView
        android:id="@+id/txtRokTrajanja_App1UnosStavke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/mojTextStyleZaIzbor"
        android:text="@string/Izaberi"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvRokTrajanja_App1UnosStavke"
        app:layout_constraintTop_toBottomOf="@+id/txtArtikal_App1UnosStavke" />

    <EditText
        android:id="@+id/etxtNapomena_App1UnosStavke"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="left|top"
        android:hint="@string/Napomena"
        android:inputType="text"
        android:minHeight="100dp"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKolicina_App1UnosStavke" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnCancel_App1ZaglavljeDokumenata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CANCELtext" />

        <Button
            android:id="@+id/btnOK_App1ZaglavljeDokumenata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/OKtext" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
