<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marko.vips_artikli.App1UnosZaglavljaActivity">

    <TextView
        android:id="@+id/txtDatumDokumenta_App1Zaglavlje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/mojTextStyleZaIzbor"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="31-12-2017" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Datum dokumenta:"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/velicinaTeksta"
        android:text="Komitent:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDatumDokumenta_App1Zaglavlje" />

    <TextView
        android:id="@+id/txtKomitent_App1Zaglavlje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/velicinaTeksta"
        android:text="@string/Izaberi"
        android:textAppearance="@style/mojTextStyleZaIzbor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/txtDatumDokumenta_App1Zaglavlje" />

    <TextView
        android:id="@+id/labelPjKomitenta_App1Zaglavlje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/velicinaTeksta"
        android:text="PJ komitenta:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtKomitent_App1Zaglavlje" />

    <TextView
        android:id="@+id/txtPjKomitenta_App1Zaglavlje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/velicinaTeksta"
        android:text="@string/Izaberi"
        android:textAppearance="@style/mojTextStyleZaIzbor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelPjKomitenta_App1Zaglavlje"
        app:layout_constraintTop_toBottomOf="@+id/txtKomitent_App1Zaglavlje" />

    <TextView
        android:id="@+id/labelTipDokumenta_App1Zaglavlje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/velicinaTeksta"
        android:text="Tip dokumneta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPjKomitenta_App1Zaglavlje" />

    <TextView
        android:id="@+id/txtTipDokumenta_App1Zaglavlje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/velicinaTeksta"
        android:text="@string/Izaberi"
        android:textAppearance="@style/mojTextStyleZaIzbor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelTipDokumenta_App1Zaglavlje"
        app:layout_constraintTop_toBottomOf="@+id/txtPjKomitenta_App1Zaglavlje" />

    <TextView
        android:id="@+id/labelPodtipDokumenta_App1Zaglavlje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/velicinaTeksta"
        android:text="Podtip dokumenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTipDokumenta_App1Zaglavlje" />

    <TextView
        android:id="@+id/txtPodtipDokumenta_App1Zaglavlje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/velicinaTeksta"
        android:text="@string/Izaberi"
        android:textAppearance="@style/mojTextStyleZaIzbor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelPodtipDokumenta_App1Zaglavlje"
        app:layout_constraintTop_toBottomOf="@+id/txtTipDokumenta_App1Zaglavlje" />


    <TextView
        android:id="@+id/labelVrstaPlacanja_App1Zaglavlje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Vrsta plaćanja"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPodtipDokumenta_App1Zaglavlje" />

    <Spinner
        android:id="@+id/spinVrstaPlacanja_App1Zaglavlje"
        style="@style/mySpinnerUnosStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/labelVrstaPlacanja_App1Zaglavlje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelVrstaPlacanja_App1Zaglavlje"
        app:layout_constraintTop_toTopOf="@+id/labelVrstaPlacanja_App1Zaglavlje" />

    <EditText
        android:id="@+id/etxtNapomena_App1Zaglavlje"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="left|top"
        android:hint="@string/Napomena"
        android:inputType="text"
        android:minHeight="100dp"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnCancel_App1ZaglavljeDokumenata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/CANCELtext" />

        <Button
            android:id="@+id/btnOK_App1ZaglavljeDokumenata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/OKtext" />
    </LinearLayout>

    <TextView
        android:id="@+id/labelSaldoKupca_App1Zaglavlje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Saldo kupca:"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelVrstaPlacanja_App1Zaglavlje" />

    <TextView
        android:id="@+id/txtSaldoKupca_App1Zaglavlje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="0,00"
        android:textColor="@color/myCrvena"
        android:textSize="@dimen/velicinaTeksta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelSaldoKupca_App1Zaglavlje"
        app:layout_constraintTop_toBottomOf="@+id/labelVrstaPlacanja_App1Zaglavlje" />
</android.support.constraint.ConstraintLayout>
